# delivery-robot

./: CMakeLists.txt  README.md
Backlog/: backlog.xlsx
Camera/: CMakeLists.txt  Robot.h  camera.h  color.h  main.cpp  robot.h  robot_message_mqtt.h  robot_state_machine_controll.h  settings.h  user.h
Dockerfile/: dockerfile
StatesMachine/: CMakeLists.txt  states_machine.cpp
UCase_dg/: use-case-diagram.txt
hsw_settings/: CMakeLists.txt  main.cpp
